# Nasa-Transcript-Processor

./: .gitignore  CHANGELOG.md  README.md  TRANSCRIPT_COMPARISON_REPORT.md  analyze_quality.py  compare_transcripts.py  compare_transcripts_fast.py  comparison_results.json  main.py  pyproject.toml  report_comparison_v3.txt  report_comparison_v4.txt  report_comparison_v5.txt  requirements.txt
assets/: a11tec.csv  a11tec.html
assets/lexicon/: apollo11_lexicon.json
config/: apollo_07.toml  apollo_08.toml  apollo_09.toml  apollo_10.toml  apollo_11.toml  apollo_12.toml  apollo_13.toml  apollo_14.toml  apollo_15.toml  apollo_16.toml  apollo_17.toml  defaults.toml  missions.toml  prompts.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  EXTENDING.md  PIPELINE.md  POST_PROCESSING.md  PROMPTS.md  QUICKSTART.md  README.md  RUN_REPORT.md  SCHEMAS.md
output/AS11_TEC/: AS11_TEC_FULL.json  AS11_TEC_FULL.txt
schemas/: merged.schema.json  page.schema.json
scripts/: compare_gt_v5.py  merge_outputs.py
src/: __init__.py  block_classifier.py  config.py  constants.py  global_config.py  image_processor.py  layout_detector.py  mission_config.py  ocr_client.py  ocr_parser.py  output_generator.py  page_extractor.py  pipeline.py  speaker_corrector.py  text_corrector.py  timestamp_corrector.py
src/config/: global_config.py  mission_config.py  models.py
src/core/: config.py  pipeline.py  post_processing.py
src/correctors/: location_corrector.py  speaker_corrector.py  text_corrector.py  timestamp_corrector.py  timestamp_index.py
src/ocr/: ocr_client.py  ocr_parser.py
src/processors/: image_processor.py  layout_detector.py  page_extractor.py
src/utils/: block_helpers.py  console.py  (+5 more)
(+9 files in other folders)
